--- a/hy_HD_admin_spring/.classpath
+++ b/hy_HD_admin_spring/.classpath
@@ -23,5 +23,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/nexacro17-xapi-1.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/cos.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
